Fix: update all API paths and navigation active state

--- a/public/stats.html
+++ b/public/stats.html
@@ -30,8 +30,8 @@
         </div>
         <nav>
            <ul>
-                <li><a href="./index.html" class="active">ホーム</a></li>
-                <li><a href="./stats.html">統計ページ</a></li>
+                <li><a href="./index.html">ホーム</a></li>
+                <li><a href="./stats.html" class="active">統計ページ</a></li>
             </ul>
         </nav>
     </header>
