--- a/public/detail.html
+++ b/public/detail.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
            <ul>
-                <li><a href="./index.html" class="active">ホーム</a></li>
+                <li><a href="./index.html">ホーム</a></li>
                 <li><a href="./stats.html">統計ページ</a></li>
             </ul>
         </nav>
