--- a/public/stats.html
+++ b/public/stats.html
@@ -26,7 +26,9 @@
 <body>
 <header>
         <div class="header-left">
-            <a style="color: white;"　href="#" class="active">※ここにロゴ</a>
+            <a style="color: white;"　href="#" class="active">
+                <img class="header-logo" src="./images/database_practice_logo.png" alt="">
+            </a>
         </div>
         <nav>
            <ul>
