--- a/public/detail.html
+++ b/public/detail.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-left">
-            <a style="color: white;"　href="#" class="active">
+            <a style="color: white;"　href="./index.html" class="active">
                 <img class="header-logo" src="./images/database_practice_logo.png" alt="">
             </a>
         </div>
